--- a/WebScheduler/src/app/scheduler/board-admin/board-admin.component.html
+++ b/WebScheduler/src/app/scheduler/board-admin/board-admin.component.html
@@ -35,4 +35,15 @@
         </div>
         <button class="btn btn-primary" (click)="saveUsers()">Spremi</button>
     </div>
+
+    <div>
+        <p>
+            <input type="text" id="username" name="username" [(ngModel)]="username">
+            <button class="btn btn-primary" type="button" (click)="getUserRole()">Dohvati korisnika</button>
+        </p>
+        <p *ngIf="requestedUser">
+            Admin: <input type="checkbox" [(ngModel)]="requestedUser.active">
+            <button class="btn btn-primary" type="button" (click)="setAdmin()">Spremi</button>
+        </p>
+    </div>
 </div>
