--- a/WebScheduler/src/app/auth/profile/profile.component.html
+++ b/WebScheduler/src/app/auth/profile/profile.component.html
@@ -1,26 +1,45 @@
 <div class="container" *ngIf="currentUser; else loggedOut">
-    <header class="jumbotron">
-      <h3>
-        <strong>{{ currentUser.username }}</strong> Profile
-      </h3>
-    </header>
-    <p>
-      <strong>Token:</strong>
-      {{ currentUser.accessToken.substring(0, 20) }} ...
-      {{ currentUser.accessToken.substr(currentUser.accessToken.length - 20) }}
-    </p>
-    <p>
-      <strong>Email:</strong>
-      {{ currentUser.email }}
-    </p>
-    <strong>Roles:</strong>
-    <ul>
-      <li *ngFor="let role of currentUser.roles">
-        {{ role }}
-      </li>
-    </ul>
-  </div>
   
-  <ng-template #loggedOut>
-    Please login.
-  </ng-template>
+
+  <form [formGroup]="form" (ngSubmit)="getDataForMonth()">  
+             
+    <div class="form-group">  
+        <label for="month">Mjesec:</label>  
+        <select formControlName="month" class="form-control">  
+            <option *ngFor="let mon of monthList" [value]="mon.value">{{mon.viewValue}}</option>  
+        </select>  
+        <div *ngIf="form.get('month')?.touched && form.get('month')?.invalid" class="alert alert-danger">  
+            <div *ngIf="form.get('month')?.errors">Mjesec je obavezan za odabir.</div>  
+        </div>  
+    </div>  
+    
+    <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Dohvati</button>  
+  </form>
+
+  <div>
+    <p>Moja dežurstva:</p>
+    <table>
+        <tbody>
+            <tr>
+                <td *ngFor="let i of [0,1,2,3,4,5,6]">{{dayNames[i]}}</td>
+            </tr>
+            <tr *ngFor="let weeks of MonthWeeks">
+                <td *ngFor="let days of weeks">
+                    <p *ngIf="!days.hidden">
+                        <span type="button" [ngClass]="{'background-selected' : days.selected, 'font-red' : days.holyday}">
+                            {{days.date | date: 'dd'}} <br /> ({{days.hours}})
+                        </span>
+                    </p>                    
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+    <p>Ukupno sati: {{hoursSum}}</p>
+</div>
+
+</div>
+  
+<ng-template #loggedOut>
+  Please login.
+</ng-template>
