--- a/WebScheduler/src/app/scheduler/board-user/board-user.component.html
+++ b/WebScheduler/src/app/scheduler/board-user/board-user.component.html
@@ -1,33 +1,43 @@
-<h4>Odabir termina dežurstva za mjesec {{nextMonth | date: 'MM.yyyy.'}}</h4>
+<div class="d-flex justify-content-center mt-3">
+    <h4>Odabir termina dežurstva za mjesec: {{monthNames[nextMonth.getMonth()]}} {{nextMonth | date: 'yyyy.'}}</h4>
+</div>
 
 <div *ngIf="!userApplication.active">
     <p>Niste uključeni u dežurstvo za sljedeći mjesec !</p>
 </div>
-<div *ngIf="userApplication.active">
-    <input type="checkbox" [(ngModel)]="userApplication.grouped">Želim dežurstvo grupirano
+<div class="row" *ngIf="userApplication.active">
+    <div class="col-9">
 
-    <div>
-        <table>
-            <tbody>
-                <tr>
-                    <td *ngFor="let i of [0,1,2,3,4,5,6]">{{dayNames[i]}}</td>
-                </tr>
-                <tr *ngFor="let weeks of nextMonthWeeks">
-                    <td *ngFor="let days of weeks">
-                        <p *ngIf="!days.hidden">
-                            <button type="button" [ngClass]="{'background-selected' : days.selected, 'font-red' : days.holyday}" (click)="dayClick(days.date)">
-                                {{days.date | date: 'dd'}}
-                            </button>
-                        </p>                    
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="pick-calendar">
+            <table class="calndar-table">
+                <thead>
+                    <tr>
+                        <th *ngFor="let i of [0,1,2,3,4,5,6]">{{dayNames[i]}}</th>
+                    </tr>
+                </thead>
+                <tbody>                   
+                    <tr *ngFor="let weeks of nextMonthWeeks">
+                        <td *ngFor="let days of weeks">
+                            <button type="button" class="cell-button" *ngIf="!days.hidden" [ngClass]="{'background-selected' : days.selected, 'font-red' : days.holyday}" (click)="dayClick(days.date)">
+                                <span class="cell-font">
+                                    {{days.date | date: 'dd'}}
+                                </span>
+                            </button>                  
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    
     </div>
+    <div class="col calendar-save-margin">
 
-    <div>
-        <button type="button" (click)="save()">
-            Spremi odabir
-        </button>
+        <input type="checkbox" [(ngModel)]="userApplication.grouped"> Želim dežurstvo grupirano
+
+        <div class="mt-2">
+            <button class="btn btn-primary w-100" type="button" (click)="save()">
+                Spremi odabir
+            </button>
+        </div>
     </div>
 </div>
