--- a/WebScheduler/src/app/auth/profile/profile.component.css
+++ b/WebScheduler/src/app/auth/profile/profile.component.css
@@ -5,3 +5,38 @@
 .font-red {
     color: red;
 }
+
+.calendar-table {
+    border: 1px solid #dddddd;
+  }
+  
+  .pick-calendar th {
+    min-width: 110px;
+    height: 80px;
+    vertical-align: bottom;
+    text-align: center;
+  }
+  
+  .pick-calendar td {
+    min-width: 120px;
+    height: 110px;    
+  }
+  
+  .calendar-save-margin {
+    margin-top: 85px;
+  }
+  
+  .cell-button {
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+  
+  .date-font {
+    font-size: 14px;
+    font-weight: 700;
+  }
+  
+  .hours-font {
+    font-size: 18px;
+  }
