--- a/WebScheduler/src/app/auth/login/login.component.html
+++ b/WebScheduler/src/app/auth/login/login.component.html
@@ -13,7 +13,7 @@
         novalidate
       >
         <div class="form-group">
-          <label for="username">Username</label>
+          <label for="username">Korisničko ime</label>
           <input
             type="text"
             class="form-control"
@@ -27,11 +27,11 @@
             role="alert"
             *ngIf="username.errors && f.submitted"
           >
-            Username is required!
+            Korisničko ime je obavezno!
           </div>
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
+          <label for="password">Lozinka</label>
           <input
             type="password"
             class="form-control"
@@ -46,15 +46,15 @@
             role="alert"
             *ngIf="password.errors && f.submitted"
           >
-            <div *ngIf="password.errors['required']">Password is required</div>
+            <div *ngIf="password.errors['required']">Lozinka je obavezna</div>
             <div *ngIf="password.errors['minlength']">
-              Password must be at least 6 characters
+              Lozinka mora biti duljine minimalno 6 znakova
             </div>
           </div>
         </div>
         <div class="form-group">
           <button class="btn btn-primary btn-block">
-            Login
+            Prijava
           </button>
         </div>
         <div class="form-group">
@@ -63,13 +63,13 @@
             role="alert"
             *ngIf="f.submitted && isLoginFailed"
           >
-            Login failed: {{ errorMessage }}
+            Pogreška: {{ errorMessage }}
           </div>
         </div>
       </form>
   
       <div class="alert alert-success" *ngIf="isLoggedIn">
-        Logged in as {{ roles }}.
+        Prijavljen kao {{ roles }}.
       </div>
     </div>
   </div>
