--- a/WebScheduler/src/app/auth/profile/profile.component.html
+++ b/WebScheduler/src/app/auth/profile/profile.component.html
@@ -51,7 +51,7 @@
             </form>
 
             <div class="row mt-5">
-                <p>Ukupno sati: {{hoursSum}}</p>
+                <p>Ukupno sati: {{hoursSum}} h</p>
             </div>
         </div>
     </div>
@@ -59,5 +59,5 @@
 </div>
   
 <ng-template #loggedOut>
-  Please login.
+  Molimo prijavite se.
 </ng-template>
