--- a/WebScheduler/src/app/scheduler/board-user/board-user.component.html
+++ b/WebScheduler/src/app/scheduler/board-user/board-user.component.html
@@ -32,7 +32,7 @@
     </div>
     <div class="col calendar-save-margin">
 
-        <input type="checkbox" [(ngModel)]="userApplication.grouped"> Želim dežurstvo grupirano
+        <input type="checkbox" [disabled]="!groupSelected" [(ngModel)]="userApplication.grouped"> Želim dežurstvo grupirano
 
         <div class="mt-2">
             <button class="btn btn-primary w-100" type="button" (click)="save()">
