--- a/WebScheduler/src/app/auth/register/register.component.html
+++ b/WebScheduler/src/app/auth/register/register.component.html
@@ -11,6 +11,7 @@
         (ngSubmit)="f.form.valid && onSubmit()"
         #f="ngForm"
         novalidate
+        class="w-50 mt-5 mx-auto"
       >
         <div class="form-group">
           <label for="username">Korisničko ime</label>
@@ -79,7 +80,7 @@
         </div>
       </form>
   
-      <div class="alert alert-success" *ngIf="isSuccessful">
+      <div class="alert alert-success w-50 mt-5 mx-auto" *ngIf="isSuccessful">
         Registracija uspješna !
       </div>
     </div>
