--- a/WebScheduler/src/app/scheduler/board-user/board-user.component.css
+++ b/WebScheduler/src/app/scheduler/board-user/board-user.component.css
@@ -2,6 +2,10 @@
     background-color: rgb(90, 197, 90);
 }
 
+.background-not-wanted {
+    background-color: rgb(197, 90, 90);
+}
+
 .font-red {
     color: red;
 }
